# geniomhe_OOP_project

./: QC_report.py  README.md  git_issue.txt  is_outlier.py  pyproject.toml  sc.pl.dynamic_highly_variable_genes.py
docs/: dynamic_highly_variable_genes.md  dynamic_scatter_plots.md  is_outlier.md
draft/: draft_sc.ipynb
oopsc/: QC_report.py  QC_report_dash.py  Untitled.ipynb  dynamic_highly_variable_genes.py  dynamic_scatter.py  is_outlier.py  sc.pl.dynamic_highly_variable_genes.py
